--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <build>
         <plugins>
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.1</version>
@@ -29,7 +29,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin> -->
             
        <plugin>
 	        <groupId>com.atlassian.maven.plugins</groupId>
